fix intro scroll bar + jumping background issue

--- a/templates/main_page/nav-screen/nav-screen.sass
+++ b/templates/main_page/nav-screen/nav-screen.sass
@@ -5,6 +5,7 @@
 	z-index: 1
 	width: 100%
 	min-height: 100%
+	overflow: hidden
 	background:
 		color: white
 		image: url('assets/window-with-cat.jpg')
